infrastructure/platform/api-management/3scale/operator-install.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payu-api-management
  labels:
    app.kubernetes.io/name: payu-api-management
    app.kubernetes.io/part-of: payu-platform
