infrastructure/platform/api-management/3scale/3scale-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-3scale-ingress
  namespace: payu-api-management
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: {} # Allow all pods in the same namespace to communicate with each other
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-openshift-router-to-3scale
  namespace: payu-api-management
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: openshift-ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-3scale-to-dev-db-cache
  namespace: payu-dev
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - payu-postgres
          - payu-cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payu-api-management
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-3scale-to-gateway-service
  namespace: payu-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gateway-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payu-api-management
      ports:
        - protocol: TCP
          port: 8080
