infrastructure/platform/api-management/3scale/allow-dev-gateway-to-redis-3scale.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dev-gateway-to-redis-3scale
  namespace: payu-api-management
spec:
  podSelector:
    matchLabels:
      app: redis-3scale
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: payu-dev
      podSelector:
        matchLabels:
          app.kubernetes.io/name: gateway-service
    ports:
    - protocol: TCP
      port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mesh-ratelimit-to-redis-3scale
  namespace: payu-api-management
spec:
  podSelector:
    matchLabels:
      app: redis-3scale
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: istio-system
      podSelector:
        matchLabels:
          app: ratelimit
    ports:
    - protocol: TCP
      port: 6379
