infrastructure/platform/api-management/3scale/payu-dev-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-3scale-to-dev-postgres
  namespace: payu-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: payu-postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payu-api-management
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-3scale-to-gateway-service
  namespace: payu-dev
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: gateway-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: payu-api-management
      ports:
        - protocol: TCP
          port: 8080
